<resources>
    <string name="app_name">ML Workshops</string>
    <string name="text_recognition_button">Text recognition</string>
    <string name="face_recognition_button">Face recognition</string>
    <string name="face_recognition_with_landmarks_button">Face recognition with landmarks</string>
    <string name="custom_model_recognition">Custom model recognition</string>
    <string name="image_labeler_recognition">Image labeler</string>
    <string name="clear">Clear</string>
</resources>
