<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:gravity="center"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <Button
        android:id="@+id/textRecognitionButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/text_recognition_button" />

    <Button
        android:id="@+id/faceRecognitionButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/face_recognition_button" />

    <Button
        android:id="@+id/customModelButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/custom_model_recognition" />

    <Button
        android:id="@+id/imageLabelerButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/image_labeler_recognition" />

    <Button
        android:id="@+id/faceLandmarksButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="@string/face_recognition_with_landmarks_button" />
</LinearLayout>
